Reintroduce width for the layer form (to avoid content jumping when changing selection)

--- a/data/popup.css
+++ b/data/popup.css
@@ -48,6 +48,7 @@ body[collapsed="true"] {
 
 .form {
   margin: 8px;
+  width: 240px;
 }
 
 .form td {
